# careertailer

./: .gitignore  CLAUDE.md  README.md  STATUS.md  docker-compose.yml  package-lock.json
backend/: .env  CLAUDE.md  PROGRESS_feb_25.md  find_metrics.py  pyproject.toml  pytest.ini
backend/.deepeval/: .deepeval_telemetry.txt
backend/app/: dependencies.py  main.py  mcp_server.py  orchestrator.py
backend/app/core/: auth.py  interfaces.py
backend/app/db/: init_db.py  models.py
backend/app/db/scripts/: 01_resume_chunks.sql  02_jobs_table.sql
backend/app/services/: MEMORY.md  db.py  embedding.py  embedding_cohere.py  embedding_factory.py  embedding_gemini.py  embedding_openai.py  embedding_voyage.py  job_queue.py  llm.py  parser.py  resume_writer.py  scraper.py  style_extractor.py
backend/tests/: check_available_models.py  check_scraper.py  deepeval_setup.py  test_llm_logic.py  test_orchestrator.py
careertailer-ui/: CLAUDE.md  PROGRESS_feb_25.md  index.html  package-lock.json  package.json
careertailer-ui/src/: App.tsx  AuthPage.tsx  main.tsx
careertailer-ui/src/components/: CoverLetterCard.tsx  HistorySidebar.tsx
careertailer-ui/src/lib/: supabase.ts
documents/: CareerTailor_System_Design.pages
